objects/Action_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Complete_Date__c</fullName>
        <description>Actual date that the action plan was completed</description>
        <inlineHelpText>Actual date that the action plan was completed</inlineHelpText>
        <label>Actual Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Outcome__c</fullName>
        <description>The result that actually occured</description>
        <inlineHelpText>The result that actually occured</inlineHelpText>
        <label>Actual Outcome</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of identified issue</description>
        <inlineHelpText>Description of identified issue</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Expected_Outcome__c</fullName>
        <description>Description of Action to take</description>
        <inlineHelpText>Description of Action to take</inlineHelpText>
        <label>Expected Outcome</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Parent_Action_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Action Plan</label>
        <referenceTo>Action_Plan__c</referenceTo>
        <relationshipLabel>Action Plans</relationshipLabel>
        <relationshipName>Action_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Filter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Which Filter meeting was the source of this action plan</description>
        <inlineHelpText>Which Filter meeting was the source of this action plan</inlineHelpText>
        <label>Source (Filter)</label>
        <referenceTo>copadovsm__Filter__c</referenceTo>
        <relationshipLabel>Action Plans</relationshipLabel>
        <relationshipName>Action_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_VSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Which Value Stream Mapping meeting was the source of this action plan</description>
        <inlineHelpText>Which Value Stream Mapping meeting was the source of this action plan</inlineHelpText>
        <label>Source (VSM)</label>
        <referenceTo>copadovsm__Value_Stream_Map__c</referenceTo>
        <relationshipLabel>Action Plans</relationshipLabel>
        <relationshipName>Action_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date of the action plan</description>
        <inlineHelpText>Start Date of the action plan</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Current Status of the Action plan</description>
        <inlineHelpText>Current Status of the Action plan</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Ready for Definition</fullName>
                </value>
                <value>
                    <fullName>Definition In Process</fullName>
                </value>
                <value>
                    <fullName>Definition Blocked</fullName>
                </value>
                <value>
                    <fullName>Ready for Action Plan</fullName>
                </value>
                <value>
                    <fullName>Action Plan In Process</fullName>
                </value>
                <value>
                    <fullName>Action Plan Blocked</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Complete_Date__c</fullName>
        <description>Expected date that the action plan will be completed</description>
        <inlineHelpText>Expected date that the action plan will be completed</inlineHelpText>
        <label>Target Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team</label>
        <referenceTo>copado__Team__c</referenceTo>
        <relationshipLabel>Action Plans</relationshipLabel>
        <relationshipName>Action_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>High overview of action plan</description>
        <inlineHelpText>High overview of action plan</inlineHelpText>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trend__c</fullName>
        <label>Trend</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VSM_Snapshot_Date__c</fullName>
        <label>VSM Snapshot Date</label>
        <type>Date</type>
    </fields>
    <label>Action Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Action Plan Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>